[tool.poetry]
name = "poetry_test"
version = "0.1.0"
description = ""
authors = ["Yuji Suzuki <y0suzuki0123@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
